fixed spacing for gallery images

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -5,6 +5,13 @@
 @import "fullcalendar";
 @import "jquery.bxslider";
 @import "style";
+@import 'masonry/basic';
+@import 'masonry/centered';
+@import 'masonry/fluid';
+@import 'masonry/gutters';
+@import 'masonry/infinitescroll';
+@import 'masonry/right-to-left';
+@import 'masonry/transitions';
 
 // Logo
  #logo {
@@ -225,7 +232,7 @@ color: white;
 .table td,
 .table th {
 
-    padding: 1rem;
+    padding: 1.3em;
     vertical-align: top;
     border-top: none;
 }
@@ -372,8 +379,8 @@ textarea {
 // About Us
 .about{
     padding: 45px 0 57px;
-    font-family: 'Gochi Hand', cursive;
-    font-size: 36px;
+   
+
 }
 .about-txt{
     line-height: 24px;
@@ -402,6 +409,86 @@ textarea {
     font-size: 36px;
     color: #ea6b6e;
 }
-.box-about{
-    
+
+.about-txt p {
+    line-height: 24px;
+}
+
+//gallery
+
+#masonry-container {
+    background: #FFF;
+    padding: 15px;
+    margin-bottom: 20px;
+    border-radius: 5px;
+    clear: both;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+}
+
+.clearfix:before,
+.clearfix:after {
+    content: "";
+    display: table;
+}
+
+.clearfix:after {
+    clear: both;
+}
+
+.clearfix {
+    zoom: 1;
+}
+
+.col1 {
+    width: 80px;
+}
+
+.col2 {
+    width: 180px;
+}
+
+.col3 {
+    width: 280px;
+}
+
+.col4 {
+    width: 380px;
+}
+
+.col5 {
+    width: 480px;
+}
+
+.col1 img {
+    max-width: 80px;
+}
+
+.col2 img {
+    max-width: 180px;
+}
+
+.col3 img {
+    max-width: 280px;
+}
+
+.col4 img {
+    max-width: 380px;
+}
+
+col5 img {
+    max-width: 480px;
+}
+
+.box img {
+    display: block;
+    /* width: 100%; */
+}
+
+.box{
+    height: 320px;
+    width: 320px;
+    margin: 10px;
+    padding: 0;
 }
